Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4760,14 +4760,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 135,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:56:22.721349Z",
-     "start_time": "2019-04-12T11:56:22.711403Z"
+     "end_time": "2019-04-12T11:58:21.558306Z",
+     "start_time": "2019-04-12T11:58:21.544904Z"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.937 7.482]\n",
+      "[[-0.877  0.481]\n",
+      " [ 0.481  0.877]]\n",
+      "[[-0.906  0.176]\n",
+      " [ 0.497  0.321]]\n"
+     ]
+    },
     {
      "ename": "SystemExit",
      "evalue": "",
@@ -4798,6 +4809,9 @@
     "        cov = w @ w.T\n",
     "        evalue, evector  = np.linalg.eigh(cov)\n",
     "        one   = evector * (1./np.sqrt(evalue+1e-8))\n",
+    "        print(evalue)\n",
+    "        print(evector)\n",
+    "        print(one)\n",
     "        two   = one @ evector.T\n",
     "        three = two @ w\n",
     "        \n",
@@ -4805,7 +4819,6 @@
     "        grad_two    = grad_three @ w.T\n",
     "        grad_one    = grad_two @ evector\n",
     "        grad_val    = evector * grad_one * (-1/2) * (evalue+1e-8) **(-3/2)\n",
-    "        print\n",
     "        sys.exit()\n",
     "#         gradww = \n",
     "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
