Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4760,11 +4760,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 138,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T11:59:13.529178Z",
-     "start_time": "2019-04-12T11:59:13.515290Z"
+     "end_time": "2019-04-12T12:00:06.977033Z",
+     "start_time": "2019-04-12T12:00:06.966124Z"
     }
    },
    "outputs": [
@@ -4772,14 +4772,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.574 3.258]\n",
-      "[[-0.768  0.64 ]\n",
-      " [ 0.64   0.768]]\n",
-      "[[-0.441  2.085]\n",
-      " [ 0.367  2.503]]\n",
-      "[[144.688   2.538]\n",
-      " [109.177   5.883]]\n",
-      "[126.932   4.21 ]\n"
+      "(2, 2)\n"
      ]
     },
     {
@@ -4818,9 +4811,9 @@
     "        grad_three  = -2 * x_mini.T @ x_mini @ three\n",
     "        grad_two    = grad_three @ w.T\n",
     "        grad_one    = grad_two @ evector\n",
-    "        grad_val    = evector * grad_one * (-1/2) * (evalue+1e-8) **(-3/2)\n",
-    "        \n",
-    "        \n",
+    "        grad_val    = (evector * grad_one * (-1/2) * (evalue+1e-8) **(-3/2)).mean(0)\n",
+    "        grad_vec    = (one.T @ grad_two).T\n",
+    "        print(grad_val.shape)\n",
     "        sys.exit()\n",
     "#         gradww = \n",
     "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
