Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4812,7 +4812,7 @@
     "        grad_two    = grad_three @ w.T\n",
     "        grad_one    = grad_two @ evector\n",
     "        grad_val    = (evector * grad_one * (-1/2) * (evalue+1e-8) **(-3/2)).mean(0)\n",
-    "        grad_vec    = (one.T @ grad_two).T\n",
+    "        grad_vec    = (one.T @ grad_two).T + \n",
     "        print(grad_val.shape)\n",
     "        sys.exit()\n",
     "#         gradww = \n",
