Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4760,11 +4760,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 145,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T12:02:44.130138Z",
-     "start_time": "2019-04-12T12:02:44.117746Z"
+     "end_time": "2019-04-12T12:04:10.435279Z",
+     "start_time": "2019-04-12T12:04:10.420393Z"
     }
    },
    "outputs": [
@@ -4772,9 +4772,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.    0.56]\n",
-      " [-0.56  0.  ]]\n",
-      "(2, 3)\n"
+      "[[ 0.     0.265]\n",
+      " [-0.265  0.   ]]\n",
+      "[[ 19.706 -66.916]\n",
+      " [ 26.415  19.564]]\n"
      ]
     },
     {
@@ -4818,10 +4819,11 @@
     "        \n",
     "        E = np.ones((2,1)) @ evalue[None,:] - evalue[:,None] @ np.ones((1,2))\n",
     "        F = 1./(E+np.eye(2)) - np.eye(2)\n",
-    "        grad_cov = \n",
-    "        grad_w   = two.T @ grad_three + \n",
+    "        \n",
+    "        grad_cov = np.linalg.inv(evector).T @ (np.diag(grad_val) + F * (evector.T @ grad_vec)) @ evector.T\n",
+    "#         grad_w   = two.T @ grad_three + \n",
     "        print(F)\n",
-    "        print(grad_w.shape)\n",
+    "        print(grad_cov)\n",
     "        sys.exit()\n",
     "#         gradww = \n",
     "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
