Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -4760,34 +4760,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 149,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-12T12:04:10.435279Z",
-     "start_time": "2019-04-12T12:04:10.420393Z"
+     "end_time": "2019-04-12T12:06:25.262585Z",
+     "start_time": "2019-04-12T12:06:25.061210Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.     0.265]\n",
-      " [-0.265  0.   ]]\n",
-      "[[ 19.706 -66.916]\n",
-      " [ 26.415  19.564]]\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# simple\n",
     "w = np.random.randn(2,3)\n",
@@ -4821,14 +4801,8 @@
     "        F = 1./(E+np.eye(2)) - np.eye(2)\n",
     "        \n",
     "        grad_cov = np.linalg.inv(evector).T @ (np.diag(grad_val) + F * (evector.T @ grad_vec)) @ evector.T\n",
-    "#         grad_w   = two.T @ grad_three + \n",
-    "        print(F)\n",
-    "        print(grad_cov)\n",
-    "        sys.exit()\n",
-    "#         gradww = \n",
-    "        w = w - 0.000001 * -2 * x_mini.T @ x_mini @ w_prime\n",
-    "        w = _sym_decorrelation(w)\n",
-    "        #print(w)"
+    "        grad_w   = two.T @ grad_three + grad_cov @ w + (w.T @ grad_cov).T\n",
+    "        w = w - 0.000001 * grad_w\n"
    ]
   },
   {
