Super important commit

--- a/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/8. focus.ipynb
@@ -14009,6 +14009,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-12T12:12:20.488014Z",
+     "start_time": "2019-04-12T12:12:20.483573Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fdsafdsafds = [10,-2]np.tan(np.array([10,-2])*X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
