Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -243,6 +243,9 @@
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
     "        \n",
+    "        if self.w.shape[1] == 1:\n",
+    "            self.w    = self.norm(self.w - adam_midw)\n",
+    "        esle\n",
     "        self.w =self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
     "        self.a =self.stand(np.random.normal(size=(outc)))\n",
     "        self.b =self.stand(np.random.normal(size=(outc)))\n",
