--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -259,7 +259,7 @@
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
     "        \n",
     "        if outc == 1:\n",
-    "            self.w    = self.norm(np.random.normal(size=(inc,outc)))\n",
+    "            self.w = self.norm(np.random.normal(size=(inc,outc)))\n",
     "        else:\n",
     "            self.w = self.sym_decorrelation(np.random.normal(size=(inc,outc)))\n",
     "        self.a =self.stand(np.random.normal(size=(outc)))\n",
@@ -426,21 +426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T12:32:52.698760Z",
-     "start_time": "2019-04-15T12:32:50.710787Z"
+     "start_time": "2019-04-15T12:33:42.191Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iter: 3 53.924261690904494\r"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -449,26 +441,6 @@
       "\n",
       "invalid value encountered in true_divide\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iter: 31 52.182554636737146\r"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-115-496714278cc4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[0mgrad2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mback_non\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;31m#         grad1bn = l1b.back(grad2)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m         \u001b[0mgrad1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mback_non\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0mlayer1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlayer1_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeed_non\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-114-9b6b3f35a86b>\u001b[0m in \u001b[0;36mback_non\u001b[1;34m(self, gradient)\u001b[0m\n\u001b[0;32m     83\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0madam_midw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 85\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msym_decorrelation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0madam_midw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     86\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     87\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mgrad_pass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-114-9b6b3f35a86b>\u001b[0m in \u001b[0;36msym_decorrelation\u001b[1;34m(self, W)\u001b[0m\n\u001b[0;32m     95\u001b[0m         \u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m<\u001b[0m\u001b[1;33m-\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m^\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m         \"\"\"\n\u001b[1;32m---> 97\u001b[1;33m         \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meigh\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     98\u001b[0m         \u001b[1;31m# u (resp. s) contains the eigenvectors (resp. square roots of\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m         \u001b[1;31m# the eigenvalues) of W * W.T\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -490,18 +462,23 @@
     "    for current_batch_index in range(0,len(X),mini_batch_size):\n",
     "        current_batch = copyX[current_batch_index:current_batch_index+mini_batch_size]\n",
     "        layer1,layer1_var = l1.feed_non(current_batch)\n",
+    "        input()\n",
     "#         layer1bn = l1b.feed(layer1)\n",
     "        layer2,layer2_var = l2.feed_non(layer1)\n",
+    "        input()\n",
     "#         layer2bn = l2b.feed(layer2)\n",
     "        layer3,layer3_var = l3.feed_linear(layer2)\n",
-    "\n",
+    "        input()\n",
     "        sys.stdout.write(\"Iter: \" + str(iter) + \" \" + str(layer1_var.mean() + layer2_var.mean() + layer3_var.mean()) + '\\r'); sys.stdout.flush()\n",
     "        \n",
     "        grad3 = l3.back_linear()\n",
+    "        input()\n",
     "#         grad2bn = l2b.back(grad3)\n",
     "        grad2 = l2.back_non(grad3)\n",
+    "        input()\n",
     "#         grad1bn = l1b.back(grad2)\n",
     "        grad1 = l1.back_non(grad2)\n",
+    "        input()\n",
     "   \n",
     "layer1,layer1_var = l1.feed_non(X)\n",
     "# layer1bn = l1b.feed(layer1)\n",
