Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 132,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T12:32:50.374005Z",
-     "start_time": "2019-04-15T12:32:50.335836Z"
+     "end_time": "2019-04-15T12:35:55.153803Z",
+     "start_time": "2019-04-15T12:35:55.123027Z"
     },
     "code_folding": [
      92,
@@ -426,14 +426,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T12:34:14.499944Z",
-     "start_time": "2019-04-15T12:33:42.193719Z"
+     "end_time": "2019-04-15T12:35:35.271678Z",
+     "start_time": "2019-04-15T12:35:31.143257Z"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1.3\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -448,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "-1.4\n"
      ]
     },
     {
@@ -468,7 +476,7 @@
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-117-10a923bde387>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mcurrent_batch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopyX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mcurrent_batch_index\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mmini_batch_size\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mlayer1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlayer1_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeed_non\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrent_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;31m#         layer1bn = l1b.feed(layer1)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[0mlayer2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlayer2_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeed_non\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayer1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-129-cc8871f51f49>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0ml2b\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mbatch_norm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0ml3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"-1.4\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mmini_batch_size\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m    851\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 853\u001b[1;33m             \u001b[0mpassword\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    854\u001b[0m         )\n\u001b[0;32m    855\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mC:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    881\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    882\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 883\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    884\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    885\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
@@ -479,10 +487,14 @@
     "learning_rate = 0.0001; beta1=0.9; beta2=0.9999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3)\n",
+    "input(\"-1\")\n",
     "l1b= batch_norm()\n",
     "l2 = PCA_layer(3,3)\n",
+    "input(\"-1.3\")\n",
+    "\n",
     "l2b= batch_norm()\n",
     "l3 = PCA_layer(3,1)\n",
+    "input(\"-1.4\")\n",
     "\n",
     "mini_batch_size    = 20\n",
     "training_iteration = 100\n",
@@ -490,6 +502,7 @@
     "copyX = np.copy(X)\n",
     "for iter in range(training_iteration):\n",
     "    copyX = shuffle(copyX)\n",
+    "    input(\"0\")\n",
     "    for current_batch_index in range(0,len(X),mini_batch_size):\n",
     "        current_batch = copyX[current_batch_index:current_batch_index+mini_batch_size]\n",
     "        layer1,layer1_var = l1.feed_non(current_batch)\n",
@@ -503,13 +516,13 @@
     "        sys.stdout.write(\"Iter: \" + str(iter) + \" \" + str(layer1_var.mean() + layer2_var.mean() + layer3_var.mean()) + '\\r'); sys.stdout.flush()\n",
     "        \n",
     "        grad3 = l3.back_linear()\n",
-    "        input()\n",
+    "        input(\"4\")\n",
     "#         grad2bn = l2b.back(grad3)\n",
     "        grad2 = l2.back_non(grad3)\n",
-    "        input()\n",
+    "        input(\"5\")\n",
     "#         grad1bn = l1b.back(grad2)\n",
     "        grad1 = l1.back_non(grad2)\n",
-    "        input()\n",
+    "        input(\"6\")\n",
     "   \n",
     "layer1,layer1_var = l1.feed_non(X)\n",
     "# layer1bn = l1b.feed(layer1)\n",
@@ -3728,31 +3741,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 130,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T12:34:37.041841Z",
-     "start_time": "2019-04-15T12:34:37.036881Z"
+     "end_time": "2019-04-15T12:35:44.097528Z",
+     "start_time": "2019-04-15T12:35:44.093580Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.34 ],\n",
-       "       [ 0.319],\n",
-       "       [-0.885]])"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:90: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in true_divide\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "np.random.normal(size=(3,1))\n",
-    "def norm(w):  return w/(np.sqrt(np.sum(w**2))+1e-5)\n",
-    "norm(np.random.normal(size=(3,1)))"
+    "l3 = PCA_layer(3,1)"
    ]
   }
  ],
