Super important commit

--- a/sandbox full of trash/PCA via gradient 3/1. present.ipynb
+++ b/sandbox full of trash/PCA via gradient 3/1. present.ipynb
@@ -233,20 +233,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 142,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-15T12:35:55.153803Z",
-     "start_time": "2019-04-15T12:35:55.123027Z"
+     "end_time": "2019-04-15T12:36:49.271619Z",
+     "start_time": "2019-04-15T12:36:49.227502Z"
     },
     "code_folding": [
      92,
+     102,
      104,
      107,
      135
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dsads\n",
+      "[[-0.981]\n",
+      " [ 0.091]\n",
+      " [ 0.174]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:90: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in true_divide\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  act functions \n",
     "def g(x) :     return np.arctan(x)\n",
@@ -257,7 +279,7 @@
     "class PCA_layer():\n",
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
-    "        \n",
+    "        print('dsads')\n",
     "        if outc == 1:\n",
     "            self.w = self.norm(np.random.normal(size=(inc,outc)))\n",
     "        else:\n",
@@ -349,6 +371,10 @@
     "        # the eigenvalues) of W * W.T\n",
     "        return np.dot(np.dot(u * (1./(np.sqrt(s+1e-5)+1e-5)), u.T), W)\n",
     "    \n",
+    "    \n",
+    "l3 = PCA_layer(3,1)\n",
+    "print(l3.w)\n",
+    "\n",
     "# need to fix this later\n",
     "class batch_norm():\n",
     "    \n",
@@ -3772,7 +3798,10 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "l3 = PCA_layer(3,1)\n",
+    "l3.w"
+   ]
   }
  ],
  "metadata": {
